# kaggle-skills

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  config.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
models/: logistic.py
notebooks/: 00-eda.ipynb
src/: submit.py  train.py
src/utils/: seed.py
tests/: test_smoke.py
